# meeting-bot-as-a-service

./: README.md
apps/node-js-to-notion-llm-brief/: Summary.md  package.json
apps/node-js-to-notion-llm-brief/src/: index.ts
apps/node-js-to-react-llm-brief/: .env.example  README.md  TODO.md  node-js-to-react-llm-brief.md  package-lock.json  package.json
apps/player-interface/: .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  types.d.ts  vite.config.ts
apps/player-interface-ai/: .gitignore  package.json  vite.config.ts
apps/player-interface/src/: App.tsx  (+2 more)
apps/react-app-with-ai-viewer-and-backend/: README.md  Summary.md  TODO.md  node-js-to-react-llm-brief.md  package-lock.json  package.json  page.html
apps/react-player-ui/: package-lock.json
apps/rust-send-bots-form/: Summary.md  desktop-rust-app.md  recorder-app-rust-tauri-html.md
apps/rust-talking-blob/: .gitignore  Summary.md  desktop-rust-app.md
apps/whisper_local/: .cargo.config.toml  .gitignore  Cargo.toml
apps/whisper_local/src/: main.rs  whisper_interaction.rs
integrations-using-third-party-software/make-to-airtable-llm-brief/: Summary.md  make-to-airtable-llm-brief.md
integrations-using-third-party-software/n8n-to-notion-llm-brief/: Summary.md
scripts/: transfer.sh
to-other-apps/make-to-airtable-llm-brief/: README.md
to-other-apps/n8n-to-notion-llm-brief/: README.md  n8n-to-notion-llm-brief.md
to-other-apps/node-js-to-notion-llm-brief/: .env.example  README.md
to-other-apps/node-js-to-react-llm-brief/: README.md  package.json
(+157 files in other folders)
